@@ -54,6 +54,7 @@ bool gCheatsEnableAllDrawableTrackPieces = false;
 bool gCheatsAllowTrackPlaceInvalidHeights = false;
 bool gCheatsAllowRegularPathAsQueue = false;
 bool gCheatsAllowSpecialColourSchemes = false;
+bool gCheatsMakeAllDestructible = false;
 
 void CheatsReset()
 {
@@ -81,6 +82,7 @@ void CheatsReset()
     gCheatsAllowTrackPlaceInvalidHeights = false;
     gCheatsAllowRegularPathAsQueue = false;
     gCheatsAllowSpecialColourSchemes = false;
+    gCheatsMakeAllDestructible = false;
 }
 
 void CheatsSet(CheatType cheatType, int32_t param1 /* = 0*/, int32_t param2 /* = 0*/)
@@ -131,6 +133,7 @@ void CheatsSerialise(DataSerialiser& ds)
         CheatEntrySerialise(ds, CheatType::AllowTrackPlaceInvalidHeights, gCheatsAllowTrackPlaceInvalidHeights, count);
         CheatEntrySerialise(ds, CheatType::AllowRegularPathAsQueue, gCheatsAllowRegularPathAsQueue, count);
         CheatEntrySerialise(ds, CheatType::AllowSpecialColourSchemes, gCheatsAllowSpecialColourSchemes, count);
+        CheatEntrySerialise(ds, CheatType::MakeDestructible, gCheatsMakeAllDestructible, count);
 
         // Remember current position and update count.
         uint64_t endOffset = stream.GetPosition();
@@ -228,6 +231,9 @@ void CheatsSerialise(DataSerialiser& ds)
                     break;
                 case CheatType::AllowSpecialColourSchemes:
                     ds << gCheatsAllowSpecialColourSchemes;
+                    break;
+                case CheatType::MakeDestructible:
+                    ds << gCheatsMakeAllDestructible;
                     break;
                 default:
                     break;
