@@ -20,6 +20,7 @@
 - Fix: [#19801] The in-game load/save window cannot be resized anymore.
 - Fix: [#19854] Looping Coaster trains clipping through steep quarter turns down.
 - Fix: [#19901] Random shop colours never assigning last colour.
+- Fix: [#19924] Destructible cheat does not allow partial ride modification.
 
 0.4.4 (2023-03-28)
 ------------------------------------------------------------------------
